Updated error messages for publish photo. Also fixed the truncation issue for image title in anchor tag for photo thumb

--- a/src/Platformd/SpoutletBundle/Resources/public/css/galleries.css
+++ b/src/Platformd/SpoutletBundle/Resources/public/css/galleries.css
@@ -92,6 +92,10 @@
     height: 80px;
 }
 
+.media-title {
+    width: 115px;
+}
+
 #media-filter-options {
     width: 200px;
 }
